--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,29 @@
-body {
-    background-color: white
+header, footer {
+    background-color: #202020;
 }
+
+header a, nav a {
+    color: #fff;
+}
+
+.cta {
+    background-color: #bb0000;
+    color: #fff;
+}
+
+.reviews {
+    background-color: #e8e8e8;
+}
+
+.featured--products {
+    background-color: #fbfbfb;
+}
+
+.cta-sale {
+    background-color: #127300
+}
+footer {
+    text-align: center;
+    color: #fff;
+}
+
