format the navigation menu
menu text undelined when hover and when user is on the different pages

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,6 +23,22 @@ header, footer {
 
 header a, nav a {
     color: #fff;
+    text-decoration: none;
+}
+nav ul {
+    padding: 0px;
+}
+
+nav li {
+    display: inline;
+
+}
+nav li:hover {
+    text-decoration: underline;
+}
+
+.current {
+    text-decoration: underline;
 }
 
 .cta {
