--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,7 +86,17 @@ footer {
     background-position-x: right;
     background-position-y: bottom;
     min-height: 70vh;
+    position:relative;
 }
+
+.welcome__content {
+    position: absolute;
+    text-align: center;
+    top: 100px;
+    left: 100px;
+
+}
+
 .selling-points__images {
     border-radius: 100px;
 }
