--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,15 @@ h2,
     font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
+header {
+    display: flex;
+    align-items: center;
+}
+
+nav {
+    margin-left: 25px;
+}
+
 header, footer {
     background-color: #202020;
 }
@@ -54,15 +63,12 @@ nav li:hover {
     text-decoration: none;
     padding: 8px 30px;
     border-radius: 6px;
+
 }
 
 .cta-header {
     font-size: 1em;
     padding: 10px 80px;
-}
-
-.reviews {
-    background-color: #e8e8e8;
 }
 
 .featured__products {
@@ -97,12 +103,49 @@ footer {
 
 }
 
-.selling-points__images {
+.selling-points__images > * {
     border-radius: 100px;
+    width: 100%;
 }
 
-.review__images {
+.selling-points {
+    margin: 25px auto;
+}
+
+.selling-points,
+.reviews__content {
+    max-width: 1000px;
+    display: flex;
+}
+
+.selling-points > *,
+.reviews__content > * {
+    flex: 1;
+}
+
+.reviews {
+    background-color: #e8e8e8;
+    text-align: center;
+    padding: 50px;
+}
+
+.reviews__content {
+    text-align: left;
+    margin: auto;
+}
+
+.reviews__content div {
+    margin: 50px;
+}
+
+.reviews__images {
+    width: 80px;
     border-radius: 50%;
+    float: right;
+}
+
+.reviews__name {
+    display: block;
 }
 
 /* Contact Page*/
@@ -110,4 +153,63 @@ footer {
 input, select, textarea {
     border: 1px solid #c4c4c4;
     border-radius: 5px;
+    margin: 10px 10px 10px 0;
+    padding: 10px; 
+}
+
+textarea {
+    height:65%;
+}
+
+.contact {
+    max-width: 1000px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.form-wrapper {
+    display: flex;
+    text-align: left;
+}
+
+.form-wrapper > * {
+    flex:1;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Product Specific Page */
+.product-specific {
+    display: flex;
+    max-width: 1000px;
+    margin: 50px auto;
+}
+
+.product-specific > * {
+    flex: 1;
+}
+
+.product-specific__details {
+    padding: 0 30px;
+}
+
+.product-specific__details a {
+display: block;
+width: 95.767px;
+margin: auto;
+}
+
+.product-image {
+    width: 100%;
+}
+
+.product-image__thumbnails {
+    display: flex;
+    width: 23.5%;
+    gap: 10px;
+    margin-top: 5px;
+}
+
+.product-specific__price {
+    font-size: 1.5em;
 }
