--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,13 +103,8 @@ footer {
 
 }
 
-.selling-points__images > * {
-    border-radius: 100px;
-    width: 100%;
-}
-
 .selling-points {
-    margin: 25px auto;
+    margin: 50px auto;
 }
 
 .selling-points,
@@ -121,6 +116,11 @@ footer {
 .selling-points > *,
 .reviews__content > * {
     flex: 1;
+}
+
+.selling-points__images {
+    border-radius: 100px;
+    width: 100%;
 }
 
 .reviews {
@@ -205,9 +205,7 @@ margin: auto;
 
 .product-image__thumbnails {
     display: flex;
-    width: 23.5%;
     gap: 10px;
-    margin-top: 5px;
 }
 
 .product-specific__price {
