--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,10 @@
 
 body {
     font-family: "Roboto";
+    min-height: 100vh;
+    margin: 0;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 }
 
 h1, 
@@ -66,13 +70,45 @@ nav li:hover {
 
 }
 
+.cta-small {
+    padding: 8px 20px;
+    font-size: 0.8em;
+    grid-column: 2;
+    grid-row: 2/4;
+    min-width: 51.2px;
+    text-align: center;
+}
+
 .cta-header {
     font-size: 1em;
     padding: 10px 80px;
 }
 
-.featured__products {
+.products {
     background-color: #fbfbfb;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+}
+
+.products img {
+    grid-column: -1/1;
+}
+
+.products h2,
+.products h3,
+.products p {
+    grid-column: 1;
+    font-size: 0.9em;
+    margin: 5px;
+}
+
+.products--sale {
+    display:flex; 
+}
+
+.old-price {
+    text-decoration: line-through;
 }
 
 .cta-sale {
@@ -81,6 +117,23 @@ nav li:hover {
 footer {
     text-align: center;
     color: #fff;
+    padding: 20px;
+}
+
+.featured {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    max-width: 1000px;
+    margin: 50px auto;
+    grid-gap: 10px;
+}
+
+.featured h2 {
+    grid-column: -1/1;
+}
+
+.featured img {
+    width: 100%;
 }
 
 /* Home Page */
@@ -210,4 +263,22 @@ margin: auto;
 
 .product-specific__price {
     font-size: 1.5em;
+}
+
+/* Guitars Page */
+.product-list {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0,1fr));
+    grid-gap: 20px;
+    margin: 50px 0; 
+
+}
+
+.products img {
+    width: 100%;
+}
+
+.guitars {
+   max-width: 1000px;
+   margin: auto; 
 }
